--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# 1 Dataload loading
+# 1 Dataload loading Module
 
 ## 1.1 Dataloader()
 
@@ -42,7 +42,7 @@ Dataloader()[1:3,1:5]
 # 3 LGG_E_MTAB_6270 Brain Lower Grade Glioma 29618666 Peptide-vaccine           12
 ```
 
-# 2 Calculating Signature Scores
+# 2 Signature Module
 
 ## 2.1 calculate_Signature_Score()
 
@@ -73,14 +73,12 @@ calculate_Signature_Score(assay(MEL_GSE78220))[1:4, 1:6]
 
  Collumns represent Signatures and rows represent sample.
 
-# 3 Signature Assessment
+## 2.2 Signature_assessment()
 
-## 3.1 Signature_assessment()
-
-### 3.1.1 function
+### 2.2.1 function
 &emsp;By employing the Signature_assessment() function, you can assess the performance of Signature(including user-built Signature) in different datasets. The function will return a "roc"" object, a list of class "roc".
 
-### 3.1.2 parameter
+### 2.2.2 parameter
  ***SE*** a SummarizedExperiment object or a list contains SummarizedExperiment objects (including expression profile and patient clinical information).
 
  ***Signature*** a subset of genes which you want to assess.
@@ -89,7 +87,7 @@ calculate_Signature_Score(assay(MEL_GSE78220))[1:4, 1:6]
 
  ***response_NR*** a logical variable.If TRUE, the function will automatically convert the patient's drug response (such as PR, NR, SD, etc. to binary value NR (non-responder) or R (Responder)).
 
-### 3.1.3 instance
+### 2.2.3 instance
 ```
 result <- Signature_assessment(MEL_PRJEB23709,
                                Weighted_mean_Sigs$Tcell_inflamed_GEP,
@@ -97,7 +95,7 @@ result <- Signature_assessment(MEL_PRJEB23709,
                                response_NR=TRUE)
 ```
 
-# 3 Machine learning for prognosis prediction
+# 3 Machine learning Module
 
 ## 3.1 build_Model()
 
@@ -133,51 +131,15 @@ mymodel <- build_Model(Model='NB', SE=train_set, feature_genes=Stem.Sig, respons
 
 See details in <https:://github/YuLab-SMU/tigeR>
 
-# 4 Tumor Microenviroment Deconvolution
+# 4 Immunotherapy Response
 
-## 4.1 CIBERSORT()
+## 4.1 Immunotherapy_Response()
 
 ### 4.1.1 function
 
- CIBERSORT is an analytical tool from the Alizadeh Lab and Newman Lab to impute gene expression profiles and provide an estimation of the abundances of member cell types in a mixed cell population, using gene expression data.  tigeR offer you an built-in function **CIBERSORT()** for estimation of the abundances of member cell types. **CIBERSORT()** function will return a list which first element is the cell type proportion matrix and second element is a boxplot.
-
-### 4.1.2 algorithm
-
- See details in
-
-### 4.1.3 parameter
-
- ***sig_matrix*** is a expression matrix of Signature genes from each type of immune cells LM22 is a matrix which contain expression of Signature genes of each type of immune cell
-
- ***mix_matrix*** is the expression matrix of bulk RNA-seq which you want to know its cell fraction
-
- ***perm*** is the number of permutations
-
- ***QN*** perform quantile normalization or not (TRUE/FALSE)
-
-### 4.1.4 instance
-
-```         
-result <- CIBERSORT(sig_matrix = LM22, SE = MEL_GSE78220, perm = 0, QN = TRUE)
-```
-
-## 4.2 xCell
-
-## 4.3 ConsensusTME
-
-## 4.4 EPIC
-
-## 4.5 abis
-
-# 5 Immunotherapy Response
-
-## 5.1 Immunotherapy_Response()
-
-### 5.1.1 function
-
  You can use **Immunotherapy_Response()** function to erform differential expression analysis or survival analysis.  Immunotherapy_Response() perform differential expression analysis and survival analysis in certain gene and return the result.
 
-### 5.1.2 algorithm
+### 4.1.2 algorithm
 
  The score of differential expression analysis is calculated by following formula:
 
@@ -191,24 +153,24 @@ result <- CIBERSORT(sig_matrix = LM22, SE = MEL_GSE78220, perm = 0, QN = TRUE)
 
  where $HR$ represents the hazard ratio and $p$ represents the P value derived from univariate Cox regression analysis.
 
-### 5.1.3 parameter
+### 4.1.3 parameter
 
  ***gene*** is the gene which you wanted.
  ***SE*** is a SummarizedExperiment(SE) which contain expression matrix and clinical information.
 
-### 5.1.4 instance
+### 4.1.4 instance
 
 ```         
 Immunotherapy_Response(SE = MEL_GSE78220)
 ```
 
-## 5.2 plt_diff()
+## 4.2 plt_diff()
 
-### 5.2.1 function
+### 4.2.1 function
 
  You can use plt_diff() to visualize differential analysis result between Pre-Treatment and Post-Treatment patients or Responders and Non-Responders in specified gene.
 
-### 5.2.2 parameter
+### 4.2.2 parameter
 
  ***gene*** is the Gene or Gene set you are interested in. 
  
@@ -216,7 +178,7 @@ Immunotherapy_Response(SE = MEL_GSE78220)
  
  ***type*** is the type of analysis you want to perform(Responder vs Non-Responder or Pre-Treatment vs Post-Treatment). c('Treatment','Response')
 
-### 5.2.3 instance
+### 4.2.3 instance
 
 ***Pre-Treament vs Post-Treatment***
 
@@ -234,19 +196,19 @@ plt_diff('CD274',MEL_GSE91061,'Response') +
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
-## 5.3 plt_surv()
+## 4.3 plt_surv()
 
-### 5.3.1 function
+### 4.3.1 function
 
  You can use plt_diff() to visualize survival analysis result in specified gene.
 
-### 5.3.2 parameter
+### 4.3.2 parameter
 
  ***gene*** is the Gene or Gene set you are interested in.
 
  ***SE*** is a SummarizedExperiment(SE) object or a list consists of SE objects. The colData of SE objects must contain response information.
 
-### 5.3.3 instance
+### 4.3.3 instance
 
 ```         
 P <- plt_surv('CD274',MEL_GSE91061)
@@ -255,4 +217,47 @@ P$plot <- P$plot +
   theme(plot.title = element_text(hjust = 0.5))
 P
 ```
+
+# 5 Tumor Microenviroment Deconvolution
+
+## 5.1 CIBERSORT()
+
+### 5.1.1 function
+
+ CIBERSORT is an analytical tool from the Alizadeh Lab and Newman Lab to impute gene expression profiles and provide an estimation of the abundances of member cell types in a mixed cell population, using gene expression data.  tigeR offer you an built-in function **CIBERSORT()** for estimation of the abundances of member cell types. **CIBERSORT()** function will return a list which first element is the cell type proportion matrix and second element is a boxplot.
+
+### 5.1.2 algorithm
+
+ See details in
+
+### 5.1.3 parameter
+
+ ***sig_matrix*** is a expression matrix of Signature genes from each type of immune cells LM22 is a matrix which contain expression of Signature genes of each type of immune cell
+
+ ***mix_matrix*** is the expression matrix of bulk RNA-seq which you want to know its cell fraction
+
+ ***perm*** is the number of permutations
+
+ ***QN*** perform quantile normalization or not (TRUE/FALSE)
+
+### 5.1.4 instance
+
+```         
+result <- CIBERSORT(sig_matrix = LM22, SE = MEL_GSE78220, perm = 0, QN = TRUE)
+```
+
+## 5.2 xCell
+
+## 5.3 ConsensusTME
+
+## 5.4 epic
+
+## 5.5 ABIS
+
+## 5.6 ESTIMATE
+
+## 5.7 quanTIseq
+
+## 5.8 MCPCounter
+
 
