--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -44,11 +44,11 @@ Dataloader()[1:3,1:5]
 
 # 2 Signature Module
 
-## 2.1 calculate_Signature_Score()
+## 2.1 Signature_calculation()
 
 ### 2.1.1 function
 
- By employing the calculate_Signature_Score() function, you can obtain a comprehensive signature score matrix for the 23 signatures in TigeR. In this matrix, the columns represent the signature scores, and the rows denote the sample names.
+ By employing the Signature_calculation() function, you can obtain a comprehensive signature score matrix for the 23 signatures in TigeR. In this matrix, the columns represent the signature scores, and the rows denote the sample names.
 
 ### 2.1.2 algorithm
 
@@ -62,7 +62,7 @@ Dataloader()[1:3,1:5]
 ### 2.1.3 instance
 
 ```         
-calculate_Signature_Score(assay(MEL_GSE78220))[1:4, 1:6]
+Signature_calculation(assay(MEL_GSE78220))[1:4, 1:6]
 
 #             IRS       tGE8     MEMTS  PRGScore Angiogenesis Teffector
 #SRR3184279 1.142 -0.1192972 11.940531 11.771754    13.484165  3.162074
