--- a/vignettes/tigeR.Rmd
+++ b/vignettes/tigeR.Rmd
@@ -218,7 +218,7 @@ See details in <https:://github/YuLab-SMU/tigeR>
 
 ### 4.1.1 function
 
- You can use **Immunotherapy_Response()** function to erform differential expression analysis or survival analysis.
+ You can use **Immunotherapy_Response()** function to perform differential expression analysis or survival analysis.
  Immunotherapy_Response() perform differential expression analysis and survival analysis in certain gene and return the result.
 
 ### 4.1.2 algorithm
